--- a/src/Assets/Article/Show/Full.html
+++ b/src/Assets/Article/Show/Full.html
@@ -2,7 +2,7 @@
     <k>Title</k>
 </subtitle>
 <description>
-    <k>Description</k>
+    <k>SEO.Description,Summary</k>
 </description>
 <block>
     <keyword>
