Control Panel Fixes.

--- a/src/Assets/Session/Control/Show/Short.html
+++ b/src/Assets/Session/Control/Show/Short.html
@@ -3,10 +3,15 @@
         <datetime><k>Created</k></datetime>
     </td>
     <td>
-        <datetime><k>Expire</k></datetime>
+        <block>
+            <datetime><k>Expire</k></datetime>
+        </block>
     </td>
     <td>
         <k>Channel</k>
+    </td>
+    <td>
+        <k>Subchannel</k>
     </td>
     <td>
         <block>
