--- a/src/Assets/Session/Control/Table.html
+++ b/src/Assets/Session/Control/Table.html
@@ -4,6 +4,7 @@
             <th><l>Session.Entity:Created</l></th>
             <th><l>Session.Entity:Expire</l></th>
             <th><l>Session.Entity:Channel</l></th>
+            <th><l>Session.Entity:Subchannel</l></th>
             <th><l>Session.Entity:IP</l></th>
             <th><l>Session.Entity:User</l></th>
             <th></th>
