--- a/src/Assets/Payment/Russia/Wire.html
+++ b/src/Assets/Payment/Russia/Wire.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h6><l>Payment.Russia.Wire:Destination</l></h6>
-                <l>Payment.Russia.Wire:Payin</l> <call>Where</call>.
+                <l>Payment.Russia.Wire:Payin</l> №U<call>Where</call>.
                 <if value="<call>Receiver.Company.VAT</call>" eq="">
                     <l>Payment.Russia.Wire:VAT.No</l>
                 </if>
