--- a/src/Assets/Session/Control/Show/Full.html
+++ b/src/Assets/Session/Control/Show/Full.html
@@ -9,6 +9,6 @@
     </tr>
     <tr>
         <td>User Agent</td>
-        <td><k>UA</k></td>
+        <td><k>User Agent</k></td>
     </tr>
 </table>
