--- a/src/Assets/Journal/Show/Full.html
+++ b/src/Assets/Journal/Show/Full.html
@@ -10,6 +10,6 @@
     </tr>
     <tr>
         <td>User Agent</td>
-        <td><k>UA</k></td>
+        <td><k>User Agent</k></td>
     </tr>
 </table>
