--- a/src/Assets/Comment/Control/Show/Full.html
+++ b/src/Assets/Comment/Control/Show/Full.html
@@ -10,6 +10,6 @@
     </div>
     <div class="panel-footer">
             <div class='pull-right'><datetime><k>Created</k></datetime></div>
-        <entity>User:<k>User</k></entity> на <entity><k>Entity</k>:<k>Object</k></entity>
+        <entity>User:<k>User</k></entity> на <entity><k>Type</k>:<k>Object</k></entity>
     </div>
 </div>
