--- a/src/Assets/Comment/Object.html
+++ b/src/Assets/Comment/Object.html
@@ -1,13 +1,13 @@
-<breadcrumb href="/reviews/<call>Where.Entity</call>/<call>Where.Object</call>">
-    <far><call>Where.Entity</call>:<call>Where.Object</call>:Title</far>
+<breadcrumb href="/reviews/<call>Where.Type</call>/<call>Where.Object</call>">
+    <far><call>Where.Type</call>:<call>Where.Object</call>:Title</far>
 </breadcrumb>
-<subtitle><far><call>Where.Entity</call>:<call>Where.Object</call>:Title</far></subtitle>
+<subtitle><far><call>Where.Type</call>:<call>Where.Object</call>:Title</far></subtitle>
 
 <exec>
     <Service>Entity.Show.Static</Service>
     <Method>Do</Method>
     <Call>
-        <Entity><call>Where.Entity</call></Entity>
+        <Entity><call>Where.Type</call></Entity>
         <Where><call>Where.Object</call></Where>
         <Template>Short</Template>
     </Call>
