--- a/src/Assets/Comment/Show/Short.html
+++ b/src/Assets/Comment/Show/Short.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        Комментарий к <entity><k>Entity</k>:<k>Object</k></entity>
+        Комментарий к <entity><k>Type</k>:<k>Object</k></entity>
     </div>
     <div class="panel-body">
         <entity template="Avatar">User:<k>User</k></entity>
