--- a/src/Assets/Comment/Include.html
+++ b/src/Assets/Comment/Include.html
@@ -35,5 +35,8 @@
             <Entity><call>Type</call></Entity>
             <Object><k>ID</k></Object>
         </Where>
+        <Sort>
+            <Created>0</Created>
+        </Sort>
     </Call>
 </exec>
