--- a/src/Assets/bootstrap/Widgets/Paginator/Start.html
+++ b/src/Assets/bootstrap/Widgets/Paginator/Start.html
@@ -1,1 +1,1 @@
-<li><a href="<k>URL</k>" rel="start"> &LeftArrowBar; </a></li>
+<li><a href="<k>URL</k>" rel="start"> <span class="fa fa-angle-double-left"></span> </a></li>
