--- a/src/Assets/bootstrap/Widgets/Paginator/End.html
+++ b/src/Assets/bootstrap/Widgets/Paginator/End.html
@@ -1,1 +1,1 @@
-<li><a href="<k>URL</k>" rel="last"> &RightArrowBar; </a></li>
+<li><a href="<k>URL</k>" rel="last"> <span class="fa fa-angle-double-right"></span> </a></li>
