--- a/src/Assets/bootstrap/Widgets/Paginator/Next.html
+++ b/src/Assets/bootstrap/Widgets/Paginator/Next.html
@@ -1,1 +1,1 @@
-<li><a href="<k>URL</k>" rel="next"> → </a></li>
+<li><a href="<k>URL</k>" rel="next"> <span class="fa fa-angle-right"></span> </a></li>
