+Fixes. +IDS +Request Filter

--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -24,9 +24,8 @@
 
     <css>Default</css>
 
-    <js>jquery:min</js>
+    <js>jquery</js>
     <js>bootstrap:min</js>
-    <js>bootstrap:tooltip</js>
 
     <js>Locale:live</js>
     <js>modernizr</js>
