--- a/src/Assets/Comment/Include.html
+++ b/src/Assets/Comment/Include.html
@@ -21,7 +21,9 @@
     </div>
 </if>
 <if value="<call>Session.User.ID</call>" null="1">
-    <a class="btn btn-primary btn-lg" href="/login">Войти и написать комментарий</a>
+    <div class="spacer">
+        <a class="btn btn-primary btn-lg" href="/login">Войти и написать комментарий</a>
+    </div>
 </if>
 
 <exec>
