--- a/src/Assets/bootstrap/Widgets/Form.html
+++ b/src/Assets/bootstrap/Widgets/Form.html
@@ -6,7 +6,7 @@
             </div>
         </block>
         <div class="panel-body">
-            <input type="hidden" name="BackURL" value="<call>HTTP.Referer</call>" />
+            <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
             <place>Form</place>
         </div>
         <div class="panel-footer">
