--- a/src/Assets/Security/Auth/VKontakte.html
+++ b/src/Assets/Security/Auth/VKontakte.html
@@ -1,4 +1,4 @@
-<a href="/identificate/VKontakte" class="btn btn-lg btn-default btn-block">
+<a href="/identificate/VKontakte" class="btn btn-lg btn-default btn-block" onclick="ga ('send', 'event', 'User', 'Login', 'VKontakte');">
     <span class="fa fa-vk"></span>
     <l>Security.Auth.VKontakte:Title</l>
 </a>
