--- a/src/Assets/Security/Auth/Facebook.html
+++ b/src/Assets/Security/Auth/Facebook.html
@@ -1,4 +1,4 @@
-<a href="/identificate/Facebook" class="btn btn-lg btn-default btn-block">
+<a href="/identificate/Facebook" class="btn btn-lg btn-default btn-block" onclick="ga ('send', 'event', 'User', 'Login', 'Facebook');">
     <span class="fa fa-facebook"></span>
     <l>Security.Auth.Facebook:Title</l>
 </a>
