Schema Org fixes.

--- a/src/Assets/Schema/Audience.html
+++ b/src/Assets/Schema/Audience.html
@@ -15,4 +15,7 @@
     <block>
         <meta itemprop="childMaxAge" content="<call>Project.Audience.childMaxAge</call>"/>
     </block>
+    <block>
+        <meta itemprop="geographicArea" content="<call>Location.Title</call>"/>
+    </block>
 </div>
