--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -37,6 +37,7 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage">
+    <div class="hide" itemprop="description"><description/></div>
     <layout>Schema:Audience</layout>
     <place>Content</place>
     <place>JS</place>
