http://schema.org/PeopleAudience

--- a/src/Assets/Schema/Audience.html
+++ b/src/Assets/Schema/Audience.html
@@ -8,12 +8,14 @@
     <block>
         <meta itemprop="suggestedMaxAge" content="<call>Project.Audience.suggestedMaxAge</call>"/>
     </block>
-
     <block>
-        <meta itemprop="childMinAge" content="<call>Project.Audience.childMinAge</call>"/>
+        <meta itemprop="requiredGender" content="<call>Project.Audience.requiredGender</call>"/>
     </block>
     <block>
-        <meta itemprop="childMaxAge" content="<call>Project.Audience.childMaxAge</call>"/>
+        <meta itemprop="requiredMinAge" content="<call>Project.Audience.requiredMinAge</call>"/>
+    </block>
+    <block>
+        <meta itemprop="requiredMaxAge" content="<call>Project.Audience.requiredMaxAge</call>"/>
     </block>
     <block>
         <meta itemprop="geographicArea" content="<call>Location.Title</call>"/>
