--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" prefix="og: http://ogp.me/ns#">
+<html class="no-js" lang="en" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/WebPage">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -36,8 +36,7 @@
     <place>CSS</place>
 </head>
 
-<body itemscope itemtype="http://schema.org/WebPage">
-    <div class="hide" itemprop="description"><description/></div>
+<body>
     <layout>Schema:Audience</layout>
     <place>Content</place>
     <place>JS</place>
