--- a/src/Assets/Search/Query/List.html
+++ b/src/Assets/Search/Query/List.html
@@ -1,2 +1,2 @@
-<h4><l>Search.Query.Entity:List.Title</l></h4>
+<h2 class="page-header"><l>Search.Query.Entity:List.Title</l></h2>
 <place>Content</place>
