--- a/src/Assets/Block/Show/Full.html
+++ b/src/Assets/Block/Show/Full.html
@@ -1,1 +1,4 @@
+<access Service="Control.Panel" Method="Do">
+    <span class="text-sm muted pull-right"><layout>Control:Pills/Inline</layout></span>
+</access>
 <k>Body</k>
