--- a/src/Assets/Complain/Control/Show/Full.html
+++ b/src/Assets/Complain/Control/Show/Full.html
@@ -6,6 +6,7 @@
         <div class="pull-right">
             <layout>Control.Pills:RUD</layout>
         </div>
+        <k>Rule</k>
         <l>Project.Terms:Rule.<k>Rule</k></l>
     </div>
     <div class="panel-footer">
@@ -20,6 +21,6 @@
     <Call>
         <Entity><k>Type</k></Entity>
         <Where><k>Object</k></Where>
-        <Template>Short</Template>
+        <Template>Control/Short</Template>
     </Call>
 </exec>
