--- a/src/Assets/bootstrap/Widgets/Form/Datepicker.html
+++ b/src/Assets/bootstrap/Widgets/Form/Datepicker.html
@@ -5,7 +5,7 @@
     <label for="<k>Name</k>"><l><k>Label</k></l>:</label>
 
        <div class="input-append date">
-          <input id="<k>ID</k>" name="<k>Name</k>" class="form-control datepicker" size="16" type="text" value="<k>Value</k>" <block>required="<k>Required</k>"</block> />
+          <input id="<k>ID</k>" name="<k>Name</k>" class="datepicker form-control" size="16" type="text" value="<k>Value</k>" <block>required="<k>Required</k>"</block> />
         </div>
 </div>
 
