--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -20,7 +20,7 @@
 </jsrun>
 
 <label for="<k>ID</k>"><l><k>Label</k></l>:</label>
-<div class="quill-wrapper">
+<div class="form-group">
     <div id="full-toolbar<k>ID</k>" class="toolbar ql-toolbar-container">
         <span class="ql-format-group">
                 <span title="<l>quill.Editor:Bold</l>" class="ql-format-button ql-bold"></span>
