--- a/src/Assets/bootstrap/Widgets/Form/File.html
+++ b/src/Assets/bootstrap/Widgets/Form/File.html
@@ -5,6 +5,9 @@
             class="form-control"
             <block>pattern="<k>Regex</k>"</block>
             <block>placeholder="<k>Placeholder</k>"</block> />
+
+
+
         <block>Максимальный размер: <k>MaxSize</k></block>
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
 
@@ -14,4 +17,7 @@
                 <file><k>Scope</k>/<k>Key</k>/<k>Value</k></file>
             </label>
         </if>
+</div>
+<div class="form-group">
+    <input type="text" name="<k>Name</k>"  class="form-control" placeholder="Или введите URL"/>
 </div>
