Обновление ресурсов. Кнопка Экспорта.

--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -8,6 +8,11 @@
         data-toggle="tooltip" data-title="Обновить" data-placement="left">
         <span class="fa fa-refresh"></span>
     </a>
+    <a class="btn btn-default"
+       href="/control/<call>Entity</call>/Export/<k>ID</k>"
+        data-toggle="tooltip" data-title="Экспортировать" data-placement="left">
+        <span class="fa fa-code"></span>
+    </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>"
        data-toggle="tooltip" data-title="Просмотреть" data-placement="left">
         <span class="fa fa-eye"></span>
