--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -45,5 +45,5 @@
     <div id="full-editor<k>ID</k>" class="editor ql-container">
         <iframe frameborder="0" height="100%" width="100%" role="presentation"></iframe>
     </div>
-    <input name="<k>Name</k>" id="<k>ID</k>" type="hidden"/>
+    <input name="<k>Name</k>" id="<k>ID</k>" type="hidden" value="<k>Value</k>"/>
 </div>
