--- a/src/Assets/bootstrap/Widgets/Form/File.html
+++ b/src/Assets/bootstrap/Widgets/Form/File.html
@@ -12,12 +12,12 @@
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
 
         <if value="<k>Value</k>" null="0">
-            <label class="checkbox">
-                <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
-                <file><k>Scope</k>/<k>Key</k>/<k>Value</k></file>
+            <label class="checkbox pull-right">
+                <input type="checkbox" name="<k>Name</k>" value="null" /> Удалить
+                <file><k>Entity</k>/<k>Key</k>/<k>Value</k></file>
             </label>
         </if>
-</div>
+</div><!--
 <div class="form-group">
-    <input type="text" name="<k>Name</k>"  class="form-control" placeholder="Или введите URL"/>
-</div>
+    <input type="text" name="<k>Name</k>_URL"  class="form-control" placeholder="Или введите URL"/>
+</div>-->
