--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -42,6 +42,7 @@
     <place>JS</place>
     <access Service="Control.Panel">
         <div class="well" style="position: fixed; right: 0; top: 100px; z-index: 99">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Для команды</h4>
             <div><strong>Версия проекта:</strong></div>
             <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
