--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -55,7 +55,7 @@
                     <div><a class="btn btn-xs btn-block btn-primary" href="http://<call>Project.Hosts.Production</call><call>HTTP.URI</call>">Боевой сервер</a></div>
             </environment>
             <environment neq="Staging">
-                    <div><a class="btn btn-xs btn-block btn-success" href="http://<call>Project.Hosts.Development</call><call>HTTP.URI</call>">Тестовый сервер</a></div>
+                    <div><a class="btn btn-xs btn-block btn-success" href="http://<call>Project.Hosts.Staging</call><call>HTTP.URI</call>">Тестовый сервер</a></div>
             </environment>
             <environment neq="Development">
                     <div><a class="btn btn-xs btn-block btn-danger" href="http://<call>Project.Hosts.Development</call><call>HTTP.URI</call>">Локальный сервер</a></div>
