--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -13,7 +13,7 @@
         theme: 'snow'
     });
 
-    fullEditor<k>ID</k>.setHTML('<k>Value</k>');
+    fullEditor<k>ID</k>.setHTML($('#<k>ID</k>_Data').html());
     fullEditor<k>ID</k>.on('text-change', function(delta, source) {
        $('#<k>ID</k>').val(fullEditor<k>ID</k>.getHTML());
     });
@@ -21,6 +21,9 @@
 
 <label for="<k>ID</k>"><l><k>Label</k></l>:</label>
 <div class="form-group">
+    <div class="hidden" id="<k>ID</k>_Data">
+        <k>Value</k>
+    </div>
     <div id="full-toolbar<k>ID</k>" class="toolbar ql-toolbar-container">
         <span class="ql-format-group">
                 <span title="<l>quill.Editor:Bold</l>" class="ql-format-button ql-bold"></span>
