--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -43,23 +43,25 @@
     <access Service="Control.Panel">
         <div class="well" style="position: fixed; right: 0; top: 100px; z-index: 99">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4>Для команды</h4>
-            <div><strong>Версия проекта:</strong></div>
+            <h4>Developers</h4>
+            <div><strong>Project Version:</strong></div>
             <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
-            <div><strong>Версия ядра:</strong></div>
+            <div><strong>Codeine Version:</strong></div>
             <call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call>
-            <div><strong>Время сервера</strong></div>
+            <div><strong>Server Time</strong></div>
             <div><datetime format="d.m.Y H:i:s T"></datetime></div>
-            <div><strong>Время разогрева</strong></div>
-            <timer>Preheat</timer> мсек.
-            <div><strong>Время полезной нагрузки</strong></div>
-            <timer>Payload</timer> мсек.
-            <div><strong>Время остывания</strong></div>
-            <timer>Cooldown</timer> мсек.
+            <div><strong>Heat time</strong></div>
+            <timer>Preheat</timer> msec.
+            <div><strong>Payload time</strong></div>
+            <timer>Payload</timer> msec.
+            <div><strong>Cooldown time</strong></div>
+            <timer>Cooldown</timer> msec.
             <div><strong>IO</strong></div>
-            <timer>IO</timer> мсек.
-            <div><strong>View</strong></div>
-            <timer>View</timer> мсек.
+            <timer>IO</timer> msec.
+            <div><strong>Rendering</strong></div>
+            <timer>View</timer> msec.
+            <div><strong>From &alpha; to &omega;</strong></div>
+            <div id="overall-profiling" style="display: none;"><call>Started</call></div>
             <hr/>
             <environment neq="Production">
                     <div><a class="btn btn-xs btn-block btn-primary" href="http://<call>Project.Hosts.Production</call><call>HTTP.URI</call>">Боевой сервер</a></div>
@@ -72,5 +74,14 @@
             </environment>
         </div>
     </access>
+<jsrun>
+    $(document).ready(function() {
+        d = new Date();
+        var time = d.getTime()-parseFloat($('#overall-profiling').html())*1000;
+        $('#overall-profiling').html(
+            time.toFixed(0) + ' msec.'
+        ).show();
+    });
+</jsrun>
 </body>
 </html>
