--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -40,48 +40,6 @@
     <layout>Schema:Audience</layout>
     <place>Content</place>
     <place>JS</place>
-    <access Service="Control.Panel">
-        <div class="well" style="position: fixed; right: 0; top: 100px; z-index: 99">
-            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4>Developers</h4>
-            <div><strong>Project Version:</strong></div>
-            <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
-            <div><strong>Codeine Version:</strong></div>
-            <call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call>
-            <div><strong>Server Time</strong></div>
-            <div><datetime format="d.m.Y H:i:s T"></datetime></div>
-            <div><strong>Heat time</strong></div>
-            <timer>Preheat</timer> msec.
-            <div><strong>Payload time</strong></div>
-            <timer>Payload</timer> msec.
-            <div><strong>Cooldown time</strong></div>
-            <timer>Cooldown</timer> msec.
-            <div><strong>IO</strong></div>
-            <timer>IO</timer> msec.
-            <div><strong>Rendering</strong></div>
-            <timer>View</timer> msec.
-            <div><strong>From &alpha; to &omega;</strong></div>
-            <div id="overall-profiling" style="display: none;"><call>Started</call></div>
-            <hr/>
-            <environment neq="Production">
-                    <div><a class="btn btn-xs btn-block btn-primary" href="http://<call>Project.Hosts.Production</call><call>HTTP.URI</call>">Боевой сервер</a></div>
-            </environment>
-            <environment neq="Staging">
-                    <div><a class="btn btn-xs btn-block btn-success" href="http://<call>Project.Hosts.Staging</call><call>HTTP.URI</call>">Тестовый сервер</a></div>
-            </environment>
-            <environment neq="Development">
-                    <div><a class="btn btn-xs btn-block btn-danger" href="http://<call>Project.Hosts.Development</call><call>HTTP.URI</call>">Локальный сервер</a></div>
-            </environment>
-        </div>
-    </access>
-<jsrun>
-    $(document).ready(function() {
-        d = new Date();
-        var time = d.getTime()-parseFloat($('#overall-profiling').html())*1000;
-        $('#overall-profiling').html(
-            time.toFixed(0) + ' msec.'
-        ).show();
-    });
-</jsrun>
+    <layout>bootstrap:Developers</layout>
 </body>
 </html>
