--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -1,5 +1,5 @@
  <access Service="Control.Panel">
-        <div class="well" style="position: fixed; right: 0; top: 100px; z-index: 99; background-color: #ffffff;">
+        <div class="alert alert-info" style="position: fixed; right: 0; top: 100px; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
             <div><strong>Project Version:</strong></div>
@@ -33,11 +33,9 @@
         </div>
     </access>
 <jsrun>
-    $(document).ready(function() {
-        d = new Date();
-        var time = d.getTime()-parseFloat($('#overall-profiling').html())*1000;
-        $('#overall-profiling').html(
-            time.toFixed(0) + ' msec.'
-        ).show();
-    });
+    d = new Date();
+    var time = d.getTime()-parseFloat($('#overall-profiling').html())*1000;
+    $('#overall-profiling').html(
+        time.toFixed(0) + ' msec.'
+    ).show();
 </jsrun>
