--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -1,4 +1,5 @@
  <access Service="Control.Panel">
+ <js>jquery.hotkeys</js>
         <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; right: 0; top: 100px; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
@@ -39,5 +40,5 @@
         time.toFixed(0) + ' msec.'
     ).show();
 
-    $(document).on('keydown', null, '~', function() { $('#devpanel').toggle()} );
+    $(document).bind('keydown', '0', function() { $('#devpanel').toggle()} );
 </jsrun>
