--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -27,7 +27,9 @@
     <js>jquery</js>
     <js>bootstrap:min</js>
 
-    <js>Locale:live</js>
+    <environment eq="Development">
+        <js>Locale:live</js>
+    </environment>
     <js>modernizr</js>
 
     <js>Default:activelink</js>
