--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -31,12 +31,13 @@
         <div class="col-lg-2">
             <div class="hidden-print"><place>Navigation</place></div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-lg-8">
+            <h4><header/></h4>
+            <place>Message</place>
+            <place>Content</place>
+        </div>
+        <div class="col-lg-2">
             <place>Sidebar</place>
-            <div class="tab-pane">
-                <place>Message</place>
-                <place>Content</place>
-            </div>
         </div>
     </div>
 </div>
