--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -3,6 +3,8 @@
         <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; right: 0; top: 100px; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
+            <div><strong>Environment:</strong></div>
+            <call>Environment</call>
             <div><strong>Project Version:</strong></div>
             <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
             <div><strong>Codeine Version:</strong></div>
