--- a/src/Assets/SEO/Stats.html
+++ b/src/Assets/SEO/Stats.html
@@ -1,9 +1,9 @@
-<a href="http://pr-cy.ru/a/www.medgreat.com" target="_blank">
-    <img src="http://s.pr-cy.ru/counters/medgreat.com" alt="Счетчик PR-CY.Rank">
+<a href="http://pr-cy.ru/a/<call>HTTP.Host</call>" target="_blank">
+    <img src="http://s.pr-cy.ru/counters/<call>HTTP.Host</call>" alt="Счетчик PR-CY.Rank">
 </a>
 
-<a href="http://pr-cy.ru/a/www.medgreat.com" target="_blank">
-    <img src="http://counter.pr-cy.ru/prcy/www.medgreat.com" alt="Счетчик PR-CY.Rank">
+<a href="http://pr-cy.ru/a/<call>HTTP.Host</call>" target="_blank">
+    <img src="http://counter.pr-cy.ru/prcy/<call>HTTP.Host</call>" alt="Счетчик PR-CY.Rank">
 </a>
 
 <place>Content</place>
