--- a/src/Assets/Mixins/Complain.html
+++ b/src/Assets/Mixins/Complain.html
@@ -1,3 +1,3 @@
-<a class="no-border" href="/complain/<call>Entity</call>/<k>ID</k>">
+<a class="no-border" rel="nofollow" href="/complain/<call>Entity</call>/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
   <span class="glyphicon glyphicon-exclamation-sign"></span>
 </a>
