--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -24,7 +24,7 @@
 
     <css>Default</css>
 
-    <js>jquery</js>
+    <js>jquery:min</js>
     <js>bootstrap:min</js>
 
     <environment eq="Development">
