New widgets. Fixes.

--- a/src/Assets/Control/Pills/Inline.html
+++ b/src/Assets/Control/Pills/Inline.html
@@ -1,14 +1,20 @@
-<span>
-    <a href="/control/<call>Entity</call>/Touch/<k>ID</k>">
+<li>
+    <a class="no-border" href="/control/<call>Entity</call>/Touch/<k>ID</k>">
         <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
     </a>
-    <a href="/control/<call>Entity</call>/Show/<k>ID</k>">
+</li>
+<li>
+    <a class="no-border" href="/control/<call>Entity</call>/Show/<k>ID</k>">
         <span class="fa fa-eye" data-toggle="tooltip" title="Просмотреть"></span>
     </a>
-    <a href="/control/<call>Entity</call>/Update/<k>ID</k>">
+</li>
+<li>
+    <a class="no-border" href="/control/<call>Entity</call>/Update/<k>ID</k>">
         <span class="fa fa-pencil" data-toggle="tooltip" title="Редактировать"></span>
     </a>
-    <a href="/control/<call>Entity</call>/Delete/<k>ID</k>">
+</li>
+<li>
+    <a class="no-border" href="/control/<call>Entity</call>/Delete/<k>ID</k>">
         <span class="fa fa-trash-o" data-toggle="tooltip" title="Удалить"></span>
     </a>
-</span>
+</li>
