--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -20,6 +20,7 @@
     <keywords/>
 
     <css>bootstrap</css>
+    <css>bootstrap:theme</css>
     <css>bootstrap:addons</css>
 
     <css>Default</css>
