--- a/src/Assets/bootstrap/Widgets/Form/Quill.html
+++ b/src/Assets/bootstrap/Widgets/Form/Quill.html
@@ -48,5 +48,5 @@
     <div id="full-editor<k>ID</k>" class="editor ql-container">
         <iframe frameborder="0" height="100%" width="100%" role="presentation"></iframe>
     </div>
-    <input name="<k>Name</k>" id="<k>ID</k>" type="hidden" value="<htmlentities><k>Value</k></htmlentities>"/>
+    <input name="<k>Name</k>" required id="<k>ID</k>" type="hidden" value="<htmlentities><k>Value</k></htmlentities>"/>
 </div>
