<call>Project.ID</call>

--- a/src/Assets/Project/Status.html
+++ b/src/Assets/Project/Status.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th>Версия проекта</th>
-                <td><call>Version.Project.Major</call>.<call>Version.Project.Minor</call></td>
+                <td><call>Version.<call>Project.ID</call>.Major</call>.<call>Version.<call>Project.ID</call>.Minor</call></td>
             </tr>
             <tr>
                 <th>Последнее обновление</th>
