Fix Developer Panel

--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -1,12 +1,12 @@
  <access Service="Control.Panel">
-        <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; right: 0; top: 100px; z-index: 99;">
+        <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; top: 25%; left: 25%; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
             <div><strong>Environment:</strong></div>
             <call>Environment</call>
-            <div><strong>Project Version:</strong></div>
+            <div><strong>Project Version</strong></div>
             <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
-            <div><strong>Codeine Version:</strong></div>
+            <div><strong>Codeine Version</strong></div>
             <call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call>
             <div><strong>Server Time</strong></div>
             <div><datetime format="d.m.Y H:i:s T"></datetime></div>
@@ -22,6 +22,20 @@
             <timer>View</timer> msec.
             <div><strong>From &alpha; to &omega;</strong></div>
             <div id="overall-profiling" style="display: none;"><call>Started</call></div>
+            <div><strong>URL</strong></div>
+            <div>
+                <call>HTTP.URI</call>
+            </div>
+            <div><strong>Browser</strong></div>
+            <div>
+                <call>HTTP.User Agent</call>
+            </div>
+            <block>
+                <div><strong>User</strong></div>
+                <div>
+                    <call>Session.User.ID</call>
+                </div>
+            </block>
             <hr/>
             <environment neq="Production">
                     <div><a class="btn btn-xs btn-block btn-primary" href="http://<call>Project.Hosts.Production</call><call>HTTP.URI</call>">Боевой сервер</a></div>
