Fix Developer Panel

--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -30,6 +30,10 @@
             <div>
                 <call>HTTP.User Agent</call>
             </div>
+            <div><strong>IP</strong></div>
+            <div>
+                <call>HTTP.IP</call>
+            </div>
             <block>
                 <div><strong>User</strong></div>
                 <div>
