Fix Developer Panel

--- a/src/Assets/bootstrap/Developers.html
+++ b/src/Assets/bootstrap/Developers.html
@@ -7,7 +7,7 @@
             <div><strong>Project Version</strong></div>
             <call>Version.Project.Major</call>.<call>Version.Project.Minor</call>
             <div><strong>Codeine Version</strong></div>
-            <call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call>
+            <call>Version.Codeine.Major</call><call>Version.Codeine.Minor</call>
             <div><strong>Server Time</strong></div>
             <div><datetime format="d.m.Y H:i:s T"></datetime></div>
             <div><strong>Heat time</strong></div>
