--- a/src/Assets/bootstrap/Developer.html
+++ b/src/Assets/bootstrap/Developer.html
@@ -1,5 +1,5 @@
  <access Service="Control.Panel">
-        <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; top: 25%; left: 25%; z-index: 99;">
+        <div id="devpanel" class="alert alert-info" style="display: none; position: fixed; top: 15px; left: 25%; z-index: 99;">
             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4>Developers</h4>
             <div><strong>Environment:</strong></div>
